findbugs: invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead